# doctors-scribe-qlora

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Project_5_MedGeemaSOAP.md  README.md  comparison.html  index.html  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
assets/: Results-BdzetPEl.css  Results-DQYkMpPQ.js  comparison-Dd-K9dZs.js  index-BBNXVcEr.css  index-gjA4XMQP.js  main-Dz_fwi09.js
frontend/: .firebaserc  Dockerfile  comparison.html  comparison_results.json  deploy.ps1  deploy_gcp.ps1  firebase.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/.firebase/: hosting.ZGlzdA.cache
frontend/.git_backup/: COMMIT_EDITMSG  FETCH_HEAD  config  index
frontend/.git_backup/logs/: HEAD
frontend/scripts/: aggregate_data.py
frontend/scripts/src/: data.ts
frontend/src/: comparison.ts  data.ts  main.ts  store.ts  style.css
frontend/src/components/: CaseGrid.ts  Hero.ts  (+9 more)
notebooks/: finetune.ipynb  inference.ipynb
scripts/: __init__.py  auto_shutdown.sh  compare_models.py  evaluate_finetuned.py  serve.py
src/: __init__.py  config.py
src/evaluation/: __init__.py  evaluate.py
src/schemas/: __init__.py  soap_note.py
src/serving/: __init__.py  api.py  model_cache.py
src/training/: __init__.py  config.py  train.py
src/utils/: __init__.py  cost_tracker.py  error_handling.py  logging.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_config.py  test_preprocessing.py  test_prompts.py  test_soap_schema.py  test_utils.py
(+8 files in other folders)
